# fbgsense

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  vcpkg.json
cli/: CMakeLists.txt  fbgsense-cli.cpp  fbgsense-cli.h
documentation/: _form0_tmp.ps  _formulas.dvi  _formulas.tex  annotated.html  argmax_8h_source.html  classes.html  classfbgsense_1_1detection_1_1detection__method-members.html  classfbgsense_1_1detection_1_1detection__method.html  classfbgsense_1_1detection_1_1detection__method__localmax-members.html  classfbgsense_1_1detection_1_1detection__method__localmax.html  classfbgsense_1_1filtering_1_1filter-members.html  classfbgsense_1_1filtering_1_1filter.html  classfbgsense_1_1filtering_1_1filter__fft-members.html  classfbgsense_1_1filtering_1_1filter__fft.html  classfbgsense_1_1filtering_1_1filter__savgol-members.html  classfbgsense_1_1filtering_1_1filter__savgol.html  classfbgsense_1_1segmentation_1_1segmentation__method-members.html  classfbgsense_1_1segmentation_1_1segmentation__method.html  classfbgsense_1_1segmentation_1_1segmentation__method__inflection-members.html  classfbgsense_1_1segmentation_1_1segmentation__method__inflection.html  classfbgsense_1_1segmentation_1_1segmentation__method__localmin-members.html  classfbgsense_1_1segmentation_1_1segmentation__method__localmin.html  classinterrogator-members.html  classinterrogator.html  classpeak-members.html  classpeak.html  classprocessor-members.html  classprocessor.html  classspectrum-members.html  classspectrum.html  classspectrum__file-members.html  classspectrum__file.html  classspectrum__sm125-members.html  classspectrum__sm125.html  decimal__comma_8h_source.html  detection__method_8h_source.html  detection__method__localmax_8h_source.html  dir_1dca00ae3aa5d513ea9d636fd4c846e2.html  dir_2c1781bf0bc2e1888a1120ce8a091f2c.html  dir_83d1c41f0aaef3713534e82dd748588d.html  (+56 more)
documentation/search/: all_0.js  all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js
gui/: CMakeLists.txt  fbgsense-gui.cpp  fbgsense-gui.fbp  fbgsense-gui.gen.cpp  fbgsense-gui.gen.h  fbgsense-gui.h  fbgsense-gui.rc
gui/widgets/: plotColors.h  wxChannelCtrl.h  wxOpenGLPlotLive.h
include/: argmax.h  interrogator.h  linspace.h  peak.h  processor.h  savgol.h  spectrum_types.h
include/detection/: detection_method.h  detection_method_localmax.h
include/filtering/: filter.h  filter_fft.h  filter_savgol.h
include/interrogator/constants/: sm125.h
include/io/: decimal_comma.h
include/segmentation/: segmentation_method.h  segmentation_method_inflection.h  segmentation_method_localmin.h
include/spectrum/: fitting.h  spectrum.h  spectrum_file.h  spectrum_sm125.h  spectrum_state.h
sm125virtsw/: CMakeLists.txt  sm125virtsw.cpp  sm125virtsw.h
src/: CMakeLists.txt  interrogator.cpp  peak.cpp
src/detection/: detection_method_localmax.cpp
src/filtering/: filter_fft.cpp  filter_savgol.cpp
src/segmentation/: segmentation_method_inflection.cpp  segmentation_method_localmin.cpp
src/spectrum/: spectrum.cpp  spectrum_file.cpp  spectrum_sm125.cpp
